# tour-guide-robot

./: .gitignore  CMakeLists.txt  README.md
app/: 5g_Tours_R1SN003_CRIS.xml  5g_Tours_R1SN003_CRIS_SHORT.xml  5g_Tours_R1SN003_CRIS_SHORT_faceTempFix.xml  5g_Tours_R1_SIM_.xml  CMakeLists.txt  convince_app.xml  fixEnv.sh
app/Dialogue_demo/: CMakeLists.txt
app/Dialogue_demo/conf/: Dialogue_demo_prompt.txt  dialogueDemoChat.ini  dialogueDemoStream.ini
app/Dialogue_demo/scripts/: Dialogue_demo.xml  Dialogue_with_pad_demo.xml
app/VLNav/: CMakeLists.txt
app/VLNav/conf/: VisualNavigationQueryBlank_prompt.txt  VisualNavigationQuery_prompt.txt  VisualNavigationReply_prompt.txt  vlnavChat.ini  vlnavReplyChat.ini  vlnavReplyStream.ini  vlnavStream.ini
app/VLNav/scripts/: VLNav_llm.xml  VLNav_llm_test_prompts.xml
app/btStructure/: CMakeLists.txt
app/btStructure/conf/: battery.ini  bt.ini  bt_SIM.ini
app/btStructure/scripts/: BtStructure_cer.xml  BtStructure_sim_cer_robot.xml
app/btStructure/trees/: GoAndExecPoi.xml  OnlyDialogues.xml
app/entireProject/: CMakeLists.txt
app/entireProject/scripts/: 5g_Tours_R1SN001.xml  5g_Tours_R1SN003_CRIS.xml  5g_Tours_R1SN003_GAM.xml  5g_Tours_R1_SIM_.xml
app/funnyThings/: CMakeLists.txt
app/funnyThings/scripts/: r1FunnyThings_sim.xml  r1Funnythings_r1.xml
app/google/: CMakeLists.txt  README.md
app/google/conf/: googeTranscription.ini  googleSynthesizer.ini
app/google/scripts/: google.xml  googleSpeechBench.xml  google_onlyDialogues.xml  google_sim.xml
app/headSynchronizer/: CMakeLists.txt
app/headSynchronizer/conf/: faceDisplay.ini  faceDisplay_images.ini
app/llmTest/: CMakeLists.txt
app/maps/: CMakeLists.txt  Test_museum_square.dae  Test_museum_square.world  Test_museum_square_502px_23m.pgm  Test_museum_square_502px_23m.ppm  arena.map  arena.pgm  arena.ppm  arena.yaml  cris_new_area.map  cris_new_area.pgm  cris_new_area.ppm  cris_new_area.yaml  cris_new_area_fixed.map  cris_new_area_fixed.ppm  cris_new_area_fixed_keepout_mask.pgm  cris_new_area_fixed_keepout_mask.yaml  dummy.map  dummy.pgm  dummy.ppm  dummy.yaml  erzelli6.map  erzelli6.yaml  gam_20m_edited.map  gam_20m_edited.yaml  gam_sim_real.map  gam_sim_real.yaml  gam_sim_real_keepout_mask.yaml  locations.ini  madama.map  madama.yaml  madama3.map  madama3.pgm  madama3.yaml  madama3keepout.pgm  madama3keepout.xcf  madama3keepout.yaml  madama_patcheskeepout.pgm  madama_patcheskeepout.xcf  madama_patcheskeepout.yaml  (+9 more)
app/maps_convince_cris/: CMakeLists.txt  cris_new_area_fixed.pgm  cris_new_area_fixed.yaml  locations.ini  maps_collection.ini
app/navigation/: CMakeLists.txt  README.md
app/navigation2/: CMakeLists.txt
app/openPoseStuff/: CMakeLists.txt
app/speechPipeline/: CMakeLists.txt
app/tourManager/: CMakeLists.txt
app/voiceActivationDetection/: CMakeLists.txt
app/yarpmanager/: CMakeLists.txt
aux_modules/: CMakeLists.txt
aux_modules/crowdDetector/: CMakeLists.txt  crowdDetector.cpp  crowdDetector.h
aux_modules/eyeContactManager/: CMakeLists.txt  eyeContactManager.cpp  eyeContactManager.h  main.cpp
aux_modules/faceExpression/: CMakeLists.txt  Readme.md  drawingThread.hpp  earsThread.cpp  earsThread.hpp  eyesThread.cpp  eyesThread.hpp  faceExpressionImage.cpp  faceExpressionImage.hpp  main.cpp  mouthThread.cpp  mouthThread.hpp
aux_modules/googleLogger/: CMakeLists.txt  FileWriter.cpp  FileWriter.h  GoogleLogger.cpp  GoogleLogger.h  main.cpp
aux_modules/headObstaclesScanner/: CMakeLists.txt  headObstaclesScanner.cpp  headObstaclesScanner.h  main.cpp
aux_modules/headSynchronizer/: CMakeLists.txt
aux_modules/roaming/: CMakeLists.txt  README.md
aux_modules/speechProcessing/: CMakeLists.txt
aux_modules/textToFace/: CMakeLists.txt  Simple.cpp  Simple.h  testmonitor.ini
aux_modules/tourManager/: CMakeLists.txt  README.md
aux_modules/voiceActivationDetection/: AudioCallback.cpp  AudioCallback.h  AudioProcessor.cpp  AudioProcessor.h  AudioProcessorCreator.cpp  AudioProcessorCreator.h  CMakeLists.txt  Detector.cpp  Detector.h  MicrophoneStatusCallback.cpp  MicrophoneStatusCallback.h  README.md  VADServer.cpp  VADServer.h  VoiceActivationDetectionModule.cpp  VoiceActivationDetectionModule.h  main.cpp
bt_server/: CMakeLists.txt  bt_server.cpp  bt_server.h  main.cpp
bt_server/lib/: CMakeLists.txt  yarp_action.cpp  yarp_action.h  yarp_condition.cpp  yarp_condition.h  yarp_node.cpp  yarp_node.h
interfaces/: CMakeLists.txt
interfaces/google_dialog/: CMakeLists.txt  google_dialog.thrift
interfaces/google_speech/: CMakeLists.txt  google_speech.thrift
interfaces/google_synthesis/: CMakeLists.txt  google_synthesis.thrift
interfaces/headSynchronizerRPC/: CMakeLists.txt  headSynchronizerRPC.thrift
interfaces/skills_interface/: BT_wrappers.thrift  CMakeLists.txt
interfaces/tourManagerRPC/: CMakeLists.txt  tourManagerRPC.thrift
skills/: CMakeLists.txt
skills/atPoI_condition/: CMakeLists.txt  bt_atPoI_condition.cpp  bt_atPoI_condition.h  main.cpp  readme.md
skills/batteryCharged/: CMakeLists.txt  bt_batteryCharged.cpp  bt_batteryCharged.h  main.cpp
skills/failureNetworkNotReceived/: CMakeLists.txt  bt_failureNetworkNotReceived.cpp  bt_failureNetworkNotReceived.h  main.cpp
skills/goToPoI_action/: CMakeLists.txt  bt_goToPoI_action.cpp  bt_goToPoI_action.h  main.cpp  readme.md
skills/goalAvailable/: CMakeLists.txt  bt_goalAvailable.cpp  bt_goalAvailable.h  main.cpp
skills/motorsNotInFault/: CMakeLists.txt  bt_motorsNotInFault.cpp  bt_motorsNotInFault.h  main.cpp  readme.md
skills/recoveryMotorsInFault/: CMakeLists.txt  bt_recoveryMotorsInFault.cpp  bt_recoveryMotorsInFault.h  main.cpp  readme.md
skills/returnToChargePoint/: CMakeLists.txt  bt_returnToChargePoint.cpp  bt_returnToChargePoint.h  main.cpp
skills/robotNotLost/: CMakeLists.txt  bt_robotNotLost.cpp  bt_robotNotLost.h  main.cpp
skills/robotNotTouched/: CMakeLists.txt  bt_robotNotTouched.cpp  bt_robotNotTouched.h  main.cpp
skills/waitGoalAvailability/: CMakeLists.txt  bt_waitGoalAvailability.cpp  bt_waitGoalAvailability.h  main.cpp  readme.md
(+335 files in other folders)
