################################################################################
#                                                                              #
# Copyright (C) 2020 Fondazione Istituto Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

add_subdirectory(headSynchronizer)
add_subdirectory(voiceActivationDetection)
add_subdirectory(maps)
add_subdirectory(btStructure)
add_subdirectory(entireProject)
add_subdirectory(google)
add_subdirectory(funnyThings)
add_subdirectory(navigation)
add_subdirectory(openPoseStuff)
add_subdirectory(tourManager)
