################################################################################
#                                                                              #
# Copyright (C) 2022 Fondazione Istituto Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

add_subdirectory(headSynchronizer)
add_subdirectory(crowdDetector)
add_subdirectory(googleLogger)
add_subdirectory(faceExpression)
add_subdirectory(headObstaclesScanner)
add_subdirectory(eyeContactManager)
add_subdirectory(tourManager)
#add_subdirectory(voiceActivationDetection)
