################################################################################
#                                                                              #
# Copyright (C) 2020 Fondazione Istituto Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

add_subdirectory(skills_interface)
add_subdirectory(headSynchronizerRPC)
add_subdirectory(google_dialog)
add_subdirectory(google_speech)
add_subdirectory(google_synthesis)
add_subdirectory(tourManagerRPC)
