################################################################################
#                                                                              #
# Copyright (C) 2022 Fondazione Istituto Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

add_subdirectory(atPoI_condition)
add_subdirectory(goToPoI_action)
#add_subdirectory(robotNotLost)
add_subdirectory(goalAvailable)
add_subdirectory(waitGoalAvailability)
add_subdirectory(batteryCharged)
add_subdirectory(returnToChargePoint)
add_subdirectory(robotNotTouched)
add_subdirectory(motorsNotInFault)
add_subdirectory(failureNetworkNotReceived)